deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: django-container
          image: mydjangoapp:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
