service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-service
spec:
  type: LoadBalancer     # <— change this
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
